Add main page backspash and style header

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   </head>
 
   <body>
-    <header>
-      <img
-        class="logo"
-        src="assets/Sam-Taeguk.svg"
-        alt="Sam-Taeguk Korean Spinwheel Logo"
-      />
-      <ul class="header-buttons">
-        <li class="locations"><a>Locations</a></li>
-        <li class="catering"><a>Catering</a></li>
-        <li class="order"><a>Order Now</a></li>
-      </ul>
-    </header>
     <main class="backsplash">
+      <div class="header">
+        <img
+          class="logo"
+          src="assets/Sam-Taeguk.svg"
+          alt="Sam-Taeguk Korean Spinwheel Logo"
+        />
+        <ul class="header-buttons">
+          <li class="locations"><a href="#">LOCATIONS</a></li>
+          <li class="catering"><a href="#">CATERING</a></li>
+          <li class="order"><a href="#">ORDER NOW</a></li>
+        </ul>
+      </div>
       <h1 class="title-name">
         100% <br />
         Korean
@@ -91,77 +91,92 @@
       </div>
     </section>
     <section class="menu">
-        <div class="recommendations">
-            <h2 class="menu-title">Recommended Menu</h2>
-            <h2 class="large-price-tag">$8.95</h2>
-            <ul>
-                <li>Gamja-Tang (Pork Bone Soup)</li>
-                <li>Sundubu-Jjigae (Tofu Soup)</li>
-                <li>Kimchi-jjigae (Kimchee Soup)</li>
-                <li>Doenjang-jjigae (Bean Paste Soup)</li>
-                <li>Spicy Chewy Noodles</li>
-                <li>Clear Noodle with Soup</li>
-                <li>Jajang Udon Noodle</li>
-            </ul>
-            <h2 class="menu-title">Meat On Rice</h2>
-            <h4 class="menu-subtext">(Served with one side dish)</h4>
-            <h2 class="large-price-tag">$10.95</h2>
-            <ul>
-                <li>Beef On Rice</li>
-                <li>Spicy Pork Belly On Rice</li>
-                <li>Kalbi On Rice</li>
-                <li>Chicken On Rice</li>
-            </ul>
-            <h2 class="menu-title">Meats Alone</h2>
-            <h2 class="large-price-tag">$13.95</h2>
-            <ul>
-                <li>Kalbi</li>
-                <li>Beef</li>
-                <li>Chicken</li>
-                <li>Mixed Meat</li>
-            </ul>
+      <div class="recommendations">
+        <h2 class="menu-title">Recommended Menu</h2>
+        <h2 class="large-price-tag">$8.95</h2>
+        <ul>
+          <li>Gamja-Tang (Pork Bone Soup)</li>
+          <li>Sundubu-Jjigae (Tofu Soup)</li>
+          <li>Kimchi-jjigae (Kimchee Soup)</li>
+          <li>Doenjang-jjigae (Bean Paste Soup)</li>
+          <li>Spicy Chewy Noodles</li>
+          <li>Clear Noodle with Soup</li>
+          <li>Jajang Udon Noodle</li>
+        </ul>
+        <h2 class="menu-title">Meat On Rice</h2>
+        <h4 class="menu-subtext">(Served with one side dish)</h4>
+        <h2 class="large-price-tag">$10.95</h2>
+        <ul>
+          <li>Beef On Rice</li>
+          <li>Spicy Pork Belly On Rice</li>
+          <li>Kalbi On Rice</li>
+          <li>Chicken On Rice</li>
+        </ul>
+        <h2 class="menu-title">Meats Alone</h2>
+        <h2 class="large-price-tag">$13.95</h2>
+        <ul>
+          <li>Kalbi</li>
+          <li>Beef</li>
+          <li>Chicken</li>
+          <li>Mixed Meat</li>
+        </ul>
+      </div>
+      <div class="bi-bim-bap">
+        <h2 class="menu-title">Bi Bim Bap</h2>
+        <div class="price-grid">
+          <h3 class="menu-item">Small</h3>
+          <h3 class="price">$8.95</h3>
+          <h3 class="menu-item">Large</h3>
+          <h3 class="price">$10.95</h3>
         </div>
-        <div class="bi-bim-bap">
-            <h2 class="menu-title">Bi Bim Bap</h2>
-            <div class="price-grid"> 
-                <h3 class="menu-item">Small</h3>
-                <h3 class="price">$8.95</h3>
-                <h3 class="menu-item">Large</h3>
-                <h3 class="price">$10.95</h3>
-            </div>
-            <h2 class="menu-title">Rice Bowl Specials</h2>
-            <h2 class="large-price-tag">$9.95</h2>
-            <ul>
-                <li>Beef</li>
-                <li>Chicken </li>
-                <li>Kalbi</li>
-                <li>Pork Belly</li>
-                <li>Kimchee and Tofu</li>
-            </ul>
-            <h2 class="menu-title">Appetizers</h2>
-            <div class="price-grid"> 
-                <h3 class="menu-item">Chap Chae</h3>
-                <h3 class="price">Small: $4.95<br>Large: $11.95</h3>
-                <h3 class="menu-item">Rice Cake</h3>
-                <h3 class="price">Small: $5.95<br>Large: $7.95</h3>
-                <h3 class="menu-item">Special Rice Cakes</h3>
-                <h3 class="price">$9.95</h3>
-                <h3 class="menu-item">Dumplings</h3>
-                <h3 class="price">$4.95</h3>
-            </div>
+        <h2 class="menu-title">Rice Bowl Specials</h2>
+        <h2 class="large-price-tag">$9.95</h2>
+        <ul>
+          <li>Beef</li>
+          <li>Chicken</li>
+          <li>Kalbi</li>
+          <li>Pork Belly</li>
+          <li>Kimchee and Tofu</li>
+        </ul>
+        <h2 class="menu-title">Appetizers</h2>
+        <div class="price-grid">
+          <h3 class="menu-item">Chap Chae</h3>
+          <h3 class="price">Small: $4.95<br />Large: $11.95</h3>
+          <h3 class="menu-item">Rice Cake</h3>
+          <h3 class="price">Small: $5.95<br />Large: $7.95</h3>
+          <h3 class="menu-item">Special Rice Cakes</h3>
+          <h3 class="price">$9.95</h3>
+          <h3 class="menu-item">Dumplings</h3>
+          <h3 class="price">$4.95</h3>
         </div>
-        <div class="specials">
-            <h2 class="menu-title">Special Combos For 2</h2>
-            <h2 class="large-price-tag">$24.95</h2>
-            <ul>
-                <li>Gamja-Tang (Pork Bone Soup)<br>Rice Cakes/Chap Chae/Rice</li>
-                <li>Bibimbap <br> Jajang U Dong Noodles/Spicy Sweet Chicken</li>
-                <li>Sundubu-Jjigae (Tofu Soup) <br> Short Ribs on Rice/Dumplings/Rice</li>
-                <li>Doenjang-jjigae (Bean Paste Soup) <br> Beef Chapchae/Rice</li>
-                <li>Beef on Rice<br> Kimchi-Jjigae(Kimchee Soup)/Rice</li>
-                <li>Pork Belly <br> Doenjang-jjigae(Bean Paste Soup)/Dumplings/Rice</li>
-            </ul>
-        </div>
+      </div>
+      <div class="specials">
+        <h2 class="menu-title">Special Combos For 2</h2>
+        <h2 class="large-price-tag">$24.95</h2>
+        <ul>
+          <li>Gamja-Tang (Pork Bone Soup)<br />Rice Cakes/Chap Chae/Rice</li>
+          <li>
+            Bibimbap <br />
+            Jajang U Dong Noodles/Spicy Sweet Chicken
+          </li>
+          <li>
+            Sundubu-Jjigae (Tofu Soup) <br />
+            Short Ribs on Rice/Dumplings/Rice
+          </li>
+          <li>
+            Doenjang-jjigae (Bean Paste Soup) <br />
+            Beef Chapchae/Rice
+          </li>
+          <li>
+            Beef on Rice<br />
+            Kimchi-Jjigae(Kimchee Soup)/Rice
+          </li>
+          <li>
+            Pork Belly <br />
+            Doenjang-jjigae(Bean Paste Soup)/Dumplings/Rice
+          </li>
+        </ul>
+      </div>
     </section>
   </body>
 </html>
