Add fonts and style main title

--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
           <li class="order"><a href="#">ORDER NOW</a></li>
         </ul>
       </div>
-      <h1 class="title-name">
-        100% <br />
-        Korean
-      </h1>
-      <h3 class="title-subtext">AVAILABLE FOR PICKUP AND DELIVERY</h3>
-      <div class="title-buttons-container">
-        <button class="title-button">About Us</button>
-        <button class="title-button">Our Menu</button>
+      <div class="title-container">
+          <h1 class="title-name">
+            100% <br />
+            Korean
+          </h1>
+          <h3 class="title-subtext">AVAILABLE FOR PICKUP AND DELIVERY</h3>
+          <div class="title-buttons-container">
+            <button class="title-button">About Us</button>
+            <button class="title-button">Our Menu</button>
+          </div>
       </div>
     </main>
     <section class="about-us">
