--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="preload"
+      as="font"
+      href="./assets/Fonts/osake-font/Osake-x3oqj.otf"
+      type="font/otf"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>100% Korean</title>
   </head>
 
   <body>
-    <main class="backsplash">
+    <main class="backsplash parallax">
       <div class="header">
         <img
           class="logo"
@@ -23,37 +30,37 @@
         </ul>
       </div>
       <div class="title-container">
-          <h1 class="title-name">
-            100% <br />
-            Korean
-          </h1>
-          <h3 class="title-subtext">AVAILABLE FOR PICKUP AND DELIVERY</h3>
-          <div class="title-buttons-container">
-            <button class="title-button">About Us</button>
-            <button class="title-button">Our Menu</button>
-          </div>
+        <h1 class="title-name">
+          100% <br />
+          Korean
+        </h1>
+        <h3 class="title-subtext">AVAILABLE FOR PICKUP AND DELIVERY</h3>
+        <div class="title-buttons-container">
+          <button class="title-button about-button" type="button">About Us</button>
+          <button class="title-button menu-button" type="button">Our Menu</button>
+        </div>
       </div>
     </main>
     <section class="about-us">
       <div class="info-contaner">
         <h2 class="info">
           Located at the border of Markham and Scarbourough, 100% Korean is the
-          second iteration of a father and daughter restaurant that has been
-          going strong for 23 years. Everything is made fresh daily in house and
-          has the care and love we put in for our own family. Come join us for a
-          meal and a chat.
+          second iteration of a father-daughter restaurant that has been going
+          strong for 23 years. Everything is made fresh daily in house and has
+          the same care and love we provide to our own family. Come join us for
+          a meal and a taste of home.
         </h2>
         <div class="location">
-          <h4 class="about-us-subheaders">Location</h4>
-          <p>
-            4779 Steeles Ave E, Scarborough, ON M1V 4S7 <br />
+          <h4 class="about-us-subheaders">LOCATION</h4>
+          <p class="about-us-text">
+            4779 Steeles Ave E <br /><br />Scarborough ON M1V 4S7 <br /><br />
             (416) 335-4444
           </p>
         </div>
         <div class="hours">
-          <h4 class="about-us-subheaders">Hours</h4>
-          <p>
-            Wednesday-Monday: 12pm-9pm <br />
+          <h4 class="about-us-subheaders">HOURS</h4>
+          <p class="about-us-text">
+            Wednesday-Monday: 12pm-9pm <br /><br />
             Closed: Tuesdays
           </p>
         </div>
@@ -61,15 +68,18 @@
       <div class="reviews">
         <div class="review">
           <p class="review-text">
-            Delicious and authentic Korean food!! Great prices for very generous
-            portions. We tried the pork bone soup and the spicy pork belly rice
-            dish and loved both!! You also get to choose your side dishes. The
-            owner is very friendly and she remembers her customers. This is a
-            hidden gem I highly recommend! There is parking in the plaza. :)
+            "Delicious and authentic Korean food!! Great prices for very
+            generous portions. We tried the pork bone soup and the spicy pork
+            belly rice dish and loved both!! You also get to choose your side
+            dishes. The owner is very friendly and she remembers her customers.
+            This is a hidden gem I highly recommend! There is parking in the
+            plaza. :)"
           </p>
           <h4 class="review-author">- Qiqi Lin</h4>
+        </div>
+        <div class="review">
           <p class="review-text">
-            Finding good food is like falling in love; you get hit when you
+            "Finding good food is like falling in love; you get hit when you
             least expect it. This was my experience at this place. I was super
             hungry off my flight, and it happened to be walking distance from
             the Airbnb. I was blown away by the food. All I had was the beef
@@ -78,84 +88,27 @@
             stole my heart. Easily a top 10 meal of my life. If you’re in the
             area how do you not eat here? If I lived in Toronto or within an
             hour drive of this place I’d probably go at least twice a month if
-            not once a week. I’m probably gonna go back tomorrow.
+            not once a week. I’m probably gonna go back tomorrow."
           </p>
           <h4 class="review-author">- Joseph Schenkel</h4>
+        </div>
+        <div class="review">
           <p class="review-text">
-            a year ago I ordered a large order for my office of 30 people and it
-            was perfect for our holiday lunch! The lunch boxes came with so many
-            delicious side dishes, and not too much rice, which was wonderful.
-            Very affordable price as well. Will definitely order from them
-            again. Thank you so much for making such delicious lunches.
+            "A year ago I ordered a large order for my office of 30 people and
+            it was perfect for our holiday lunch! The lunch boxes came with so
+            many delicious side dishes, and not too much rice, which was
+            wonderful. Very affordable price as well. Will definitely order from
+            them again. Thank you so much for making such delicious lunches."
           </p>
           <h4 class="review-author">- Sabina Wong</h4>
         </div>
       </div>
     </section>
-    <section class="menu">
-      <div class="recommendations">
-        <h2 class="menu-title">Recommended Menu</h2>
-        <h2 class="large-price-tag">$8.95</h2>
-        <ul>
-          <li>Gamja-Tang (Pork Bone Soup)</li>
-          <li>Sundubu-Jjigae (Tofu Soup)</li>
-          <li>Kimchi-jjigae (Kimchee Soup)</li>
-          <li>Doenjang-jjigae (Bean Paste Soup)</li>
-          <li>Spicy Chewy Noodles</li>
-          <li>Clear Noodle with Soup</li>
-          <li>Jajang Udon Noodle</li>
-        </ul>
-        <h2 class="menu-title">Meat On Rice</h2>
-        <h4 class="menu-subtext">(Served with one side dish)</h4>
-        <h2 class="large-price-tag">$10.95</h2>
-        <ul>
-          <li>Beef On Rice</li>
-          <li>Spicy Pork Belly On Rice</li>
-          <li>Kalbi On Rice</li>
-          <li>Chicken On Rice</li>
-        </ul>
-        <h2 class="menu-title">Meats Alone</h2>
-        <h2 class="large-price-tag">$13.95</h2>
-        <ul>
-          <li>Kalbi</li>
-          <li>Beef</li>
-          <li>Chicken</li>
-          <li>Mixed Meat</li>
-        </ul>
-      </div>
-      <div class="bi-bim-bap">
-        <h2 class="menu-title">Bi Bim Bap</h2>
-        <div class="price-grid">
-          <h3 class="menu-item">Small</h3>
-          <h3 class="price">$8.95</h3>
-          <h3 class="menu-item">Large</h3>
-          <h3 class="price">$10.95</h3>
-        </div>
-        <h2 class="menu-title">Rice Bowl Specials</h2>
-        <h2 class="large-price-tag">$9.95</h2>
-        <ul>
-          <li>Beef</li>
-          <li>Chicken</li>
-          <li>Kalbi</li>
-          <li>Pork Belly</li>
-          <li>Kimchee and Tofu</li>
-        </ul>
-        <h2 class="menu-title">Appetizers</h2>
-        <div class="price-grid">
-          <h3 class="menu-item">Chap Chae</h3>
-          <h3 class="price">Small: $4.95<br />Large: $11.95</h3>
-          <h3 class="menu-item">Rice Cake</h3>
-          <h3 class="price">Small: $5.95<br />Large: $7.95</h3>
-          <h3 class="menu-item">Special Rice Cakes</h3>
-          <h3 class="price">$9.95</h3>
-          <h3 class="menu-item">Dumplings</h3>
-          <h3 class="price">$4.95</h3>
-        </div>
-      </div>
+    <section class="menu parallax">
+      <h1 class="main-menu-title">Menu</h1>
       <div class="specials">
-        <h2 class="menu-title">Special Combos For 2</h2>
-        <h2 class="large-price-tag">$24.95</h2>
-        <ul>
+        <h2 class="menu-title">Meals For Two <span class="large-price-tag">$24.95</span></h2>
+        <ul class="menu-item">
           <li>Gamja-Tang (Pork Bone Soup)<br />Rice Cakes/Chap Chae/Rice</li>
           <li>
             Bibimbap <br />
@@ -178,6 +131,60 @@
             Doenjang-jjigae(Bean Paste Soup)/Dumplings/Rice
           </li>
         </ul>
+        <h2 class="menu-title">Meats Alone <span class="large-price-tag">$13.95</span></h2>
+        <ul class="menu-item">
+          <li>Kalbi</li>
+          <li>Beef</li>
+          <li>Chicken</li>
+          <li>Mixed Meat</li>
+        </ul>
+      </div>
+      <div class="recommendations">
+        <h2 class="menu-title">Recommendations <span class="large-price-tag">$8.95</span></h2>
+        <ul class="menu-item">
+          <li>Gamja-Tang (Pork Bone Soup)</li>
+          <li>Sundubu-Jjigae (Tofu Soup)</li>
+          <li>Kimchi-jjigae (Kimchee Soup)</li>
+          <li>Doenjang-jjigae (Bean Paste Soup)</li>
+          <li>Spicy Chewy Noodles</li>
+          <li>Clear Noodle with Soup</li>
+          <li>Jajang Udon Noodle</li>
+        </ul>
+        <h2 class="menu-title">Meat On Rice <span class="large-price-tag">$10.95</span></h2>
+        <ul class="menu-item">
+          <li>Beef On Rice</li>
+          <li>Spicy Pork Belly On Rice</li>
+          <li>Kalbi On Rice</li>
+          <li>Chicken On Rice</li>
+        </ul>
+      </div>
+      <div class="bi-bim-bap">
+        <h2 class="menu-title">Bibimbap</h2>
+        <div class="price-grid">
+          <h3 class="menu-item">Small</h3>
+          <h3 class="price">$8.95</h3>
+          <h3 class="menu-item">Large</h3>
+          <h3 class="price">$10.95</h3>
+        </div>
+        <h2 class="menu-title">Rice Bowl Specials <span class="large-price-tag">$9.95</span></h2>
+        <ul class="menu-item">
+          <li>Beef</li>
+          <li>Chicken</li>
+          <li>Kalbi</li>
+          <li>Pork Belly</li>
+          <li>Kimchee and Tofu</li>
+        </ul>
+        <h2 class="menu-title">Appetizers</h2>
+        <div class="price-grid">
+          <h3 class="menu-item">Chap Chae</h3>
+          <h3 class="price">Small: $4.95<br />Large: $11.95</h3>
+          <h3 class="menu-item">Rice Cake</h3>
+          <h3 class="price">Small: $5.95<br />Large: $7.95</h3>
+          <h3 class="menu-item">Special Rice Cakes</h3>
+          <h3 class="price">$9.95</h3>
+          <h3 class="menu-item">Dumplings</h3>
+          <h3 class="price">$4.95</h3>
+        </div>
       </div>
     </section>
   </body>
