Add button jump functionality

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         </h1>
         <h3 class="title-subtext">AVAILABLE FOR PICKUP AND DELIVERY</h3>
         <div class="title-buttons-container">
-          <button class="title-button about-button" type="button">About Us</button>
-          <button class="title-button menu-button" type="button">Our Menu</button>
+          <button class="title-button about-button"><a href="#about-us-jump">About Us</a></button>
+          <button class="title-button menu-button"><a href="#main-menu-title">Our Menu</a></button>
         </div>
+        <div id="about-us-jump"></div>
       </div>
     </main>
     <section class="about-us">
@@ -105,7 +106,7 @@
       </div>
     </section>
     <section class="menu parallax">
-      <h1 class="main-menu-title">Menu</h1>
+      <h1 id="main-menu-title">Menu</h1>
       <div class="specials">
         <h2 class="menu-title">Meals For Two <span class="large-price-tag">$24.95</span></h2>
         <ul class="menu-item">
