Correct menu item

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <li>Kimchi-jjigae (Kimchee Soup)</li>
           <li>Doenjang-jjigae (Bean Paste Soup)</li>
           <li>Spicy Chewy Noodles</li>
-          <li>Clear Noodle with Soup</li>
+          <li>Glass Noodles with Soup</li>
           <li>Jajang Udon Noodle</li>
         </ul>
         <h2 class="menu-title">Meat On Rice <span class="large-price-tag">$10.95</span></h2>
