Correct button linking

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </h1>
         <h3 class="title-subtext">AVAILABLE FOR PICKUP AND DELIVERY</h3>
         <div class="title-buttons-container">
-          <button class="title-button about-button"><a href="#about-us-jump">About Us</a></button>
-          <button class="title-button menu-button"><a href="#main-menu-title">Our Menu</a></button>
+          <form action="#about-us-jump"><button type="submit" class="title-button about-button">About Us</button></form>
+          <form action="#main-menu-title"><button type="submit" class="title-button menu-button">Our Button</button></form>
         </div>
         <div id="about-us-jump"></div>
       </div>
