Corrected Menu Button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3 class="title-subtext">AVAILABLE FOR PICKUP AND DELIVERY</h3>
         <div class="title-buttons-container">
           <form action="#about-us-jump"><button type="submit" class="title-button about-button">About Us</button></form>
-          <form action="#main-menu-title"><button type="submit" class="title-button menu-button">Our Button</button></form>
+          <form action="#main-menu-title"><button type="submit" class="title-button menu-button">Our Menu</button></form>
         </div>
         <div id="about-us-jump"></div>
       </div>
