--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
           alt="Sam-Taeguk Korean Spinwheel Logo"
         />
         <ul class="header-buttons">
-          <li class="locations"><a href="#">LOCATIONS</a></li>
-          <li class="catering"><a href="#">CATERING</a></li>
-          <li class="order"><a href="#">ORDER NOW</a></li>
+          <li class="locations"><a href="#about-us-jump">LOCATIONS</a></li>
+          <li class="order"><a href="https://www.ubereats.com/ca/store/100%25-korean/uWioLkFKTxOK9ClA3NkC1w">ORDER NOW</a></li>
         </ul>
       </div>
       <div class="title-container">
